---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/conditional/test_conditional_with_pointers.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/conditional/test_conditional_with_pointers.c"
   (function-definition external stack-size=72
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (c_vp~2 `ptr<void const>` @0) ∅)
         (definition (vp~3 `ptr<void>` @8) ∅)
         (definition (c_ip~4 `ptr<int const>` @16) ∅)
         (definition (v_ip~5 `ptr<int volatile>` @24) ∅)
         (definition (ip~6 `ptr<int>` @32) ∅)
         (definition (c_cp~7 `ptr<char const>` @40) ∅)
         (expression (0 `int` @48))
         (expression (0 `int` @48))
         (expression (0 `int` @48))
         (expression (0 `int` @48))
         (expression (0 `int` @48))
         (expression (0 `int` @48))
         (expression (0 `int` @48)))))

----- stderr -----
